--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -9,6 +9,7 @@ default_platform = "web"
 
 # `build` & `serve` dist path
 out_dir = "docs"
+#out_dir = "dist"
 
 # resource (assets) file folder
 asset_dir = "assets"
