--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -35,7 +35,7 @@ index_on_404 = false
 
 # CSS style file
 
-style = ["./css/tailwind.css", "https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"]
+style = ["./css/tailwind.css"]
 
 # Javascript code file
 script = []
