--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -19,7 +19,7 @@ asset_dir = "assets"
 # HTML title tag content
 title = "personal-webpage"
 
-base_path = "Destroyerrrocket.github.io"
+#base_path = "Destroyerrrocket.github.io"
 [web.watcher]
 
 # when watcher trigger, regenerate the `index.html`
