--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,11 @@ edition = "2021"
 
 [dependencies]
 
-dioxus = { version = "0.5", features = ["web", "router"] }
+dioxus = { version = ">=0.5", features = ["web", "router"] }
 
 # Debug
-dioxus-logger = "0.5.1"
+dioxus-logger = ">=0.5.1"
+manganis = ">=0.2.2"
 
 [profile.release]
 opt-level = "z"
