--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -26,7 +26,7 @@ title = "Pol's website"
 reload_html = true
 
 # which files or dirs will be watcher monitoring
-watch_path = ["src", "assets"]
+watch_path = ["index.html", "src", "assets"]
 
 index_on_404 = true
 
