--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,18 @@ dioxus = { version = ">=0.5", features = ["web", "router"] }
 dioxus-logger = ">=0.5.1"
 manganis = ">=0.2.2"
 
+#[unstable]
+#build-std = ["std", "panic_abort", "core", "alloc"]
+#build-std-features = ["panic_immediate_abort"]
+
+[build]
+rustflags = [
+    "-Clto",
+    "-Zvirtual-function-elimination",
+    "-Zlocation-detail=none",
+    "-Zfmt-debug=none"
+]
+
 [profile.release]
 opt-level = "z"
 debug = false
