--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -26,7 +26,7 @@ title = "Pol's website"
 reload_html = true
 
 # which files or dirs will be watcher monitoring
-watch_path = ["index.html", "src", "assets"]
+watch_path = ["index.html", "src", "assets", "blogs/info.json"]
 
 index_on_404 = false
 
@@ -35,7 +35,7 @@ index_on_404 = false
 
 # CSS style file
 
-style = ["/css/tailwind.css", "/css/hamburgers-min.css"]
+style = []
 
 # Javascript code file
 script = []
